--- a/smurfs/package.json
+++ b/smurfs/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0"
   },
